Fix scrollbar on small screens. Closes #17

--- a/src/styles/_has_overflowY.css
+++ b/src/styles/_has_overflowY.css
@@ -17,6 +17,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
+    min-height: 100px;
     border: 3px solid var(--newsprint-dk);
     border-radius: 100px;
     background-color: var(--t-magazine-pill);
